# mortar-pestle

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: DESIGN.md  POLISH_PROMPT.md
iskariel-capture/: Cargo.toml
iskariel-capture/src/: main.rs
iskariel-capture/src/capture/: audio.rs  egl.rs  mod.rs  portal.rs  replay_ring.rs
iskariel-capture/src/capture/windows/: d3d11.rs  encode.rs  mod.rs  wgc.rs
iskariel-capture/src/daemon/: engine.rs  mod.rs  protocol.rs  socket.rs  state.rs
iskariel-capture/src/daemon/hotkeys/: state.rs  winhook.rs
iskariel-capture/src/daemon/save/: mod.rs  mux.rs  namer_win.rs
iskariel-capture/src/run/: mod.rs
iskariel-capture/src/spike/: mod.rs
iskariel-capture/src/spike/d3d11wgc/: mod.rs
iskariel-capture/src/spike/interop/: mod.rs
iskariel-stt/: Cargo.toml
iskariel-stt/src/: bench.rs  main.rs  mic.rs  models.rs  protocol.rs  vad.rs  whisper.rs
iskariel-stt/src/daemon/: dictation.rs  engine.rs  mod.rs  socket.rs
iskariel-stt/src/daemon/hotkeys/: mod.rs  portal.rs  state.rs
modules/core/agents/: index.jsx  manifest.json
modules/core/browser/: BrowserPage.jsx  BrowserPopover.jsx  BrowserSettingsTab.jsx  HistoryPopover.jsx  HistoryRoute.jsx  LoadingScreen.jsx  NewTabPage.jsx  PasswordField.jsx  PasswordGenerator.jsx  ShieldPopover.jsx  SitePopover.jsx  TabRail.jsx  TabSidebar.jsx  VaultEntryEditor.jsx  VaultKeyButton.jsx  VaultRoute.jsx  VaultSettingsSections.jsx  blocker.js  credsStore.js  index.jsx  manifest.json  tabStore.js  useCredsStore.js  useTabDrag.js  useTabStore.js  useVaultLock.js  vaultIcons.jsx
modules/core/domain-builder/: Overlay.jsx  index.jsx  manifest.json  state.jsx
modules/core/feedback/: AccountSettingsTab.jsx  BoardPage.jsx  ComposeModal.jsx  DevControls.jsx  PostDetail.jsx  SignInModal.jsx  StatusBadge.jsx  UserAvatar.jsx  VoteButton.jsx  feedback.css  feedbackApi.js  index.jsx  manifest.json  useSession.js
modules/core/game-wiki/: Chart.jsx  CommsTranscriptView.jsx  GameWikiPage.jsx  GameWikiTree.jsx  GraphTab.jsx  LanesTab.jsx  MapTab.jsx  MatchViewPopup.jsx  PlayerStatsTab.jsx  RetagButton.jsx  ReviewModal.jsx  ScoreboardTab.jsx  ScrimListLanding.jsx  ScrimViewer.jsx  autoClassify.js  classColors.js  commsCompile.js  game-wiki.css  gamewikiIndex.js  index.jsx  manifest.json  matchAssets.js  matchData.js  noteCompile.js  scrimSchema.js  useGameWikiTree.js  useStopwatch.js
modules/core/graph/: index.jsx  manifest.json
modules/core/planner/: AnalyticsPanel.jsx  BlockTimerUI.jsx  CalendarPanel.jsx  CalendarSection.jsx  NotesPanel.jsx  PlannerDock.jsx  PlannerProvider.jsx  SettingsTab.jsx  TaskDragOverlay.jsx  api.js  blockPull.js  dragDurations.js  index.jsx  manifest.json  useVault.js
modules/core/pulse/: index.jsx  manifest.json
modules/core/skills/: SkillOutput.jsx  SkillsNav.jsx  SkillsPage.jsx  index.jsx  manifest.json
modules/core/skills-browser/: SkillsBrowserTab.jsx  api.js  index.jsx  manifest.json  registry.json
modules/core/terminal/: api.js  (+17 more)
mortar-pestle-capture/: Cargo.toml
mortar-pestle-capture/src/: main.rs
mortar-pestle-stt/: Cargo.toml
mortar-pestle-stt/src/: bench.rs  main.rs  mic.rs  models.rs  protocol.rs  resample.rs  whisper.rs
nvenc-sys/: Cargo.toml  build.rs
nvenc-sys/examples/: encode.rs  encode_perf.rs  encoder300.rs  probe.rs  session.rs
nvenc-sys/src/: cuda.rs  encoder.rs  lib.rs
scripts/: ensure-latest-json.mjs  fetch-usda-db.mjs  rotate-binary.mjs  sync-versions.mjs
scripts/spike/: encode-bench.sh  fedora-probe.sh  make-fixtures.sh  make-parity-fixtures.sh  make-vedit-media.sh
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: browser-content.json  default.json
src-tauri/scripts/: backfill_anime_metadata.py  build_fdc_db.py  download_album.py  download_album.py.bak  download_anime.py  import_mal_parse.py  import_music_parse.py
src-tauri/src/: asset_protocol.rs  browser_spike.rs  lib.rs  main.rs  media_server.rs  proxy.rs  tool_path.rs  watcher.rs
src-tauri/src/blocker/: commands.rs  ffi.rs  lists.rs  mod.rs  scriptlets.rs  scriptlets_lib.js
src-tauri/src/blocker/seed/: content_filter_cosmetic.json  content_filter_net.json  cosmetics.css  hosts.txt  scriptlets.json
src-tauri/src/capture/: carriage.rs  client.rs  mod.rs  supervisor.rs
src-tauri/src/commands/: anime_download.rs  anime_search.rs  browser.rs  browser_common.rs  browser_windows.rs  build.rs  capture.rs  claude_usage.rs  coaching.rs  credentials.rs  daily.rs  design.rs  dev_service.rs  devtools.rs  docs.rs  downloads_history.rs  feedback.rs  folder.rs  food.rs  health.rs  knowledge.rs  library_import.rs  manifest_gen.rs  media.rs  mod.rs  music_download.rs  music_listen.rs  music_playlist.rs  music_search.rs  proc_util.rs  pty.rs  qbit.rs  recycle_bin.rs  reference.rs  release.rs  self_update.rs  sidebar.rs  skills.rs  stt.rs  vault.rs  (+2 more)
src-tauri/src/commands/domain/: mod.rs  subspec.rs
src-tauri/src/overlay/: kwin_rule.rs  mod.rs  state.rs
src-tauri/src/parsers/: albums.rs  daily.rs  editor_proxy.rs  frontmatter.rs  frontmatter_cache.rs  health.rs  log.rs  mod.rs  playlists.rs  probe_cache.rs  projects.rs  quick_notes.rs  routine.rs  series.rs  sessions.rs  skills.rs  tasks.rs  video_transcode.rs
src-tauri/src/render/: manifest.rs  markdown.rs  mod.rs
src-tauri/src/stt/: carriage.rs  client.rs  mod.rs  supervisor.rs
src-tauri/tests/: capture_roundtrip.rs  health_grammar.rs  integration.rs  stt_roundtrip.rs  transcode_integration.rs  vault_io_sanity.rs
src-tauri/tests/common/: mod.rs
supabase/: README.md
supabase/migrations/: 0001_feedback_board.sql  0002_votes_direction.sql
tools/shield/: README.md  gen_seed.py  regen.sh
web/: index.html  package-lock.json  package.json  vite.config.js
web/scripts/: check-theme-contrast.mjs
web/src/: App.jsx  api.js  command-actions.js  fonts.css  main.jsx  module-loader.js  router.js  styles.css
web/vite-plugins/: aos-component-id.js  module-sizes.js
(+348 files in other folders)
