[package]
name = "iskariel-capture"
version = "0.1.0"
edition = "2021"
description = "Game Capture engine: xdg-desktop-portal ScreenCast + PipeWire capture -> NVENC encode. Windowless."
publish = false

[dependencies]
# Cross-platform: the NVENC FFI, async runtime + logging + the NDJSON protocol
# types. The Linux capture deps (ashpd/pipewire/egl/glow) and the Windows
# `windows` crate are per-OS below (Game Capture Windows port, SF0).
nvenc-sys = { path = "../nvenc-sys" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }
log = "0.4"
env_logger = "0.11"
# Complete Phase 1 (sub-plan 5): NDJSON control-protocol types + (de)serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Linux capture backend: xdg-desktop-portal ScreenCast + PipeWire dmabuf -> EGL/GL.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", features = ["screencast", "global_shortcuts", "screenshot"] }
# Consume ashpd's portal signal streams (Activated / ShortcutsChanged) — StreamExt.
futures-util = "0.3"
pipewire = { version = "0.10", features = ["v0_3_33"] }
khronos-egl = { version = "6", features = ["dynamic"] }
glow = "0.17"
# zbus: NOT a direct dep — the dash-free app-id passes ashpd's typed `AppID`, so
# host registration uses the clean `register_host_app_with_connection` (no raw
# proxy). Reach `zbus` via `ashpd::zbus` if ever needed (avoids a two-zbus clash).
# cudarc: NOT added — the CUDA fallback arm is a confirm-gated follow-up if GL blocks.

# Windows capture backend: WGC (Windows.Graphics.Capture) + D3D11/DXGI -> NVENC
# DirectX. The SF0 feasibility spike uses these; SF1+ extends the feature set.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
    # SF3 daemon engine: QPC clock (Performance), the high-res waitable-timer pacer
    # (Threading), and SECURITY_ATTRIBUTES named by the CreateWaitableTimerExW sig.
    "Win32_Security",
    "Win32_System_Performance",
    "Win32_System_Threading",
    # SF8 GameNamer + clip naming: GetLocalTime (friendly YYYY-MM-DD HH-MM-SS stem).
    # GetForegroundWindow/GetWindowTextW reuse Win32_UI_WindowsAndMessaging (above).
    "Win32_System_SystemInformation",
    # SF10 exclusive-fullscreen detect-&-warn: SHQueryUserNotificationState
    # (QUNS_RUNNING_D3D_FULL_SCREEN) — the instant pre-check before the no-first-frame
    # ground truth. A D3D exclusive-fullscreen app is invisible to WGC.
    "Win32_UI_Shell",
    # SF5 WASAPI loopback audio: IAudioClient/IAudioCaptureClient/IMMDeviceEnumerator +
    # ActivateAudioInterfaceAsync (per-process loopback) + the PROPVARIANT blob carrier.
    # ActivateAudioInterfaceAsync is gated on BOTH StructuredStorage + Variant (PROPVARIANT).
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
# `windows::core::implement` (the IActivateAudioInterfaceCompletionHandler COM object)
# expands to `windows_core::` paths, so windows-core must be a direct dep by that name.
windows-core = "0.61"
# SF6 WH_KEYBOARD_LL global hotkeys: the low-level keyboard hook + message pump +
# GetAsyncKeyState (modifier-chord matching). windows-sys is the lighter raw-FFI binding
# the STT winhook uses; kept separate from `windows` (the typed binding) — no type clash.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
